--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -196,7 +196,7 @@
 			</Filter>
 		</Filter>
 		<Filter
-			Name="Resource Files"
+			Name="_Resource Files_"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
