--- a/win/VS2005/WoAServer.vcproj
+++ b/win/VS2005/WoAServer.vcproj
@@ -180,14 +180,10 @@
 			>
 		</Filter>
 		<Filter
-			Name="Resource Files"
+			Name="_Resource Files_"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-			<File
-				RelativePath="..\..\src\WoAServer\Main.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Shared"
@@ -209,6 +205,10 @@
 				</File>
 			</Filter>
 		</Filter>
+		<File
+			RelativePath="..\..\src\WoAServer\Main.cpp"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
