+ Improving HUD ( compiling errors because of some includes )
Signed-off-by: Ferdinand <ferdi89@gmail.com>

--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -263,6 +263,10 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="HUD"
+					>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
@@ -320,6 +324,10 @@
 					>
 				</File>
 			</Filter>
+		</Filter>
+		<Filter
+			Name="HUD"
+			>
 		</Filter>
 		<File
 			RelativePath="..\..\src\WorldOfAnguis\Main.cpp"
