+ Memory leak detection + ObjectMgr (just the class definition)
Signed-off-by: Ferdinand <ferdi89@gmail.com>

--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -324,6 +324,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="ObjectMgr"
+				>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Units\ObjectMgr\ObjectMgr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Units\ObjectMgr\ObjectMgr.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="HUD"
