Its teh alpha almost!!!!111!!111!!eleven!! Added Explosions, Merged collision detection. Screwed up ObjMgr.
Signed-off-by: SueBlack <shamanic.sue@gmail.com>

--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -340,6 +340,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Explosion"
+				>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Units\Explosion\Explosion.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Units\Explosion\Explosion.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Controllers"
