* Fix memory leak <at least for now>, the problem was in the Explosion::GetExplosionMap() func.
Signed-off-by: Ferdinand <ferdi89@gmail.com>

--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -186,6 +186,10 @@
 				RelativePath="..\..\src\Shared\Singleton.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\src\Shared\Time.h"
+				>
+			</File>
 			<Filter
 				Name="Network"
 				>
