+Added bullets and crosshair, angle control. +Fixed explosion at Map's borders, and non-destructable grounds. -Unit - Unit collision disabled
Signed-off-by: Ferdinand <ferdi89@gmail.com>

--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -336,6 +336,14 @@
 				Name="Weapon"
 				>
 				<File
+					RelativePath="..\..\src\WorldOfAnguis\Units\Weapon\Bullet.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Units\Weapon\Bullet.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\WorldOfAnguis\Units\Weapon\Weapon.cpp"
 					>
 				</File>
