--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -280,6 +280,18 @@
 					</File>
 				</Filter>
 			</Filter>
+			<Filter
+				Name="Log"
+				>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Graphics\DirectX\Log\ScreenLog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\WorldOfAnguis\Graphics\DirectX\Log\ScreenLog.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="World"
