--- a/win/VS2005/WorldOfAnguis.vcproj
+++ b/win/VS2005/WorldOfAnguis.vcproj
@@ -409,6 +409,14 @@
 			RelativePath="..\..\src\WorldOfAnguis\Main.cpp"
 			>
 		</File>
+		<File
+			RelativePath="..\..\README"
+			>
+		</File>
+		<File
+			RelativePath="..\..\TODO"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
